--- a/wercker.yml
+++ b/wercker.yml
@@ -1,23 +1,46 @@
-box:
+box: 
   id: golang
   ports:
     - "3000"
 
 dev:
   steps:
-    - internal/watch:
+    - setup-go-workspace:
+        package-dir: github.com/alai04/gogo-service
+
+    - script:
+        name: env
+        code: env
+
+    - script:
+        name: go get
         code: |
-          go build
-          ./gogo-service
+          cd $WERCKER_SOURCE_DIR
+          go version
+          export GO111MODULE=on
+          export PATH=$WERCKER_SOURCE_DIR/bin:$PATH
+
+    - internal/watch:
+        code: go run main.go
         reload: true
 
-# Build definition
 build:
-  # The steps that will be executed on build
   steps:
+    - setup-go-workspace:
+        package-dir: github.com/alai04/gogo-service
 
-    # golint step!
-    - wercker/golint
+    - script:
+        name: env
+        code: env
+
+    - script:
+        name: go get
+        code: |
+          cd $WERCKER_SOURCE_DIR
+          go version
+          export GO111MODULE=on
+          export PATH=$WERCKER_SOURCE_DIR/bin:$PATH
+          go mod tidy
 
     # Build the project
     - script:
@@ -29,4 +52,27 @@ build:
     - script:
         name: go test
         code: |
-          go test ./...
+          go test -v ./...
+
+    - script:
+        name: copy files to wercker output
+        code: |
+          cp -R ./ ${WERCKER_OUTPUT_DIR}
+
+# deploy:
+#   steps:
+#     - heroku-deploy:
+#         key: $HEROKU_KEY
+#         user: $HEROKU_USER
+#         app-name: $HEROKU_APP_NAME
+
+# docker:
+#   steps:
+#     - internal/docker-push:
+#         username: $DOCKER_USERNAME
+#         password: $DOCKER_PASSWORD
+#         cmd: /pipeline/source/hello
+#         port: "8080"
+#         tag: latest
+#         repository: alai04/book-hello
+#         registry: https://registry.hub.docker.com
